added feature section

--- a/index.html
+++ b/index.html
@@ -53,16 +53,66 @@
                     <!-- Ratings Badge -->
                     <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white w-56 p-4">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
-                    <div>
-                        <h3 class="text-3xl font-extrabold">5.00</h3>
-                        <p>Trust Pilot Rating</p>
-                    </div>
+                        <div>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
+                            <p>Trust Pilot Rating</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    <main>
+    <main class="container max-auto">
+        <!-- feature section -->
+        <section class="my-24 text-center">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable. </p>
+            <!--feature tea card container  -->
+            <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <!-- first card -->
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-6  shadow-xl">
+                    <figure>
+                        <img src="/images/tea-1.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Second card -->
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-6  shadow-xl">
+                    <figure>
+                        <img src="/images/tea-2.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Third card -->
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-6  shadow-xl">
+                    <figure>
+                        <img src="/images/tea-3.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Fourth card -->
+                <div class="card bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] p-6  shadow-xl">
+                    <figure>
+                        <img src="/images/tea-4.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="text-2xl font-extrabold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
