--- a/index.html
+++ b/index.html
@@ -113,7 +113,79 @@
                 </div>
             </div>
         </section>
-
+        <!-- great tea and fresh tea section -->
+        <section class="my-24 flex gap-14 flex-col md:flex-row">
+            <div class="grid grid-cols-1 gap-6 md:grid-cols-2 flex-1">
+                <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="row-span-2 flex justify-center px-8 py-10 bg-[#E6A62319]">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2 flex justify-center px-8 py-10 bg-[#57763919]">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#57763919]"></div>
+            </div>
+            <div class="space-y-4 flex-1">
+                <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
+                <h4 class="text-2xl font-extrabold">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-2xl font-extrabold">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+        <!-- super client section -->
+        <section class="my-24 py-16 px-20 bg-gradient-to-r from-[#FF8938] to-[#FF0000] gap-9 flex flex-col lg:flex-row">
+            <div class="flex items-center lg:pr-12">
+                <div class="space-y-8">
+                    <h3 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h3>
+                    <p class="font-medium text-white">There are many variations of passages of Lorem Ipsum
+                        <br>available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised words
+                        which
+                        don't look even slightly believable. </p>
+                    <button class="btn btn-primary">Show All</button>
+                </div>
+            </div>
+            <!-- Next Review -->
+            <div class="relative">
+                <div class=" relative top-2 mb-10 z-10 opacity-40 rounded-lg p-10 bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for
+                        the people who are interested to treatment</p>
+                    <h4 class="text-[#1C1C1C] font-bold">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F] font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Current Review -->
+                <div class=" absolute z-20 top-28 lg:-left-16 lg:w-[433px] rounded-lg p-10 bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for
+                        the people who are interested to treatment</p>
+                    <h4 class="text-[#1C1C1C] font-bold">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F] font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- Previous Review -->
+                <div class=" relative z-10 opacity-40  rounded-lg p-10 bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 rounded-full bg-white" src="images/client.png" alt="">
+                    <p class="text-[#777777] mb-5">We are providing the best and suitable home insurance services for
+                        the people who are interested to treatment</p>
+                    <h4 class="text-[#1C1C1C] font-bold">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F] font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
