--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end':'#FF0000',
                     }
                 }
             }
@@ -39,17 +40,20 @@
         <div class="hero">
             <div class="hero-content flex-col lg:flex-row">
                 <div>
-                    <h1 class="text-7xl font-extrabold">
+                    <h1 class="text-4xl md:text-7xl font-extrabold">
                         It's good <br>
                         tea time at The <br>
                         Tea House</h1>
                     <p class="py-6">
                         Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">
+                        Explore More
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                    </button>
                 </div>
                 <div>
-                    <img src="/images/banner.png" class="max-w-sm " />
+                    <img src="/images/banner.png" class="" />
                     <!-- Ratings Badge -->
                     <div class="flex items-center gap-4 -mt-16 drop-shadow-lg bg-white w-56 p-4">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -138,7 +142,7 @@
             </div>
         </section>
         <!-- super client section -->
-        <section class="my-24 py-16 px-20 bg-gradient-to-r from-[#FF8938] to-[#FF0000] gap-9 flex flex-col lg:flex-row">
+        <section class="my-24 py-16 px-20 bg-gradient-to-r from-gradient-start to-gradient-end gap-9 flex flex-col lg:flex-row">
             <div class="flex items-center lg:pr-12">
                 <div class="space-y-8">
                     <h3 class="text-5xl font-extrabold text-white">Meet Our Super <br> Clients</h3>
@@ -146,7 +150,8 @@
                         <br>available, but
                         the majority have suffered alteration in some form, by injected humour, or randomised words
                         which
-                        don't look even slightly believable. </p>
+                        don't look even slightly believable.
+                    </p>
                     <button class="btn btn-primary">Show All</button>
                 </div>
             </div>
@@ -186,10 +191,112 @@
                 </div>
             </div>
         </section>
+        <!-- News and Events Section -->
+        <section class="my-24">
+            <div class="text-center space-y-7 mb-20">
+            <h3 class="text-5xl font-extrabold text-[#1C1C1C]">News & Events</h3>
+            <p class="text-base font-medium text-[#777777]">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even slightly believable. </p>
+                </div>
+                <!-- News Section -->
+            <div class="flex flex-col md:flex-row gap-5">
+                <!-- News 1 -->
+                <div class="card border-2 p-6">
+                    <figure>
+                        <img src="images/news-1.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="text-[#777777] font-medium">Feb 05, 2027</p>
+                        <h2 class="card-title font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="font-bold">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- News 2 -->
+                <div class="card border-2 p-6">
+                    <figure>
+                        <img src="images/news-2.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="text-[#777777] font-medium">Feb 05, 2027</p>
+                        <h2 class="card-title font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="font-bold">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- News 3 -->
+                <div class="card border-2 p-6">
+                    <figure>
+                        <img src="images/news-3.png" alt="" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="text-[#777777] font-medium">Feb 05, 2027</p>
+                        <h2 class="card-title font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="font-bold">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="bg-base-200 text-base-content px-5 lg:px-48 py-10">
+        <div class="flex justify-between my-10">
+            <img src="images/cup.png" alt="">
+            <p>
+                <span>Ready to get started?</span>
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+            </p>
+        </div>
+      <div class="footer">
+        <nav>
+            <h6 class="footer-title">Services</h6>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+          </nav>
+          <nav>
+            <h6 class="footer-title">Company</h6>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+          </nav>
+          <nav>
+            <h6 class="footer-title">Legal</h6>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+          </nav>
+          <form>
+            <h6 class="footer-title">Newsletter</h6>
+            <fieldset class="form-control w-80">
+              <label class="label">
+                <span class="label-text">Enter your email address</span>
+              </label>
+              <div class="join">
+                <input
+                  type="text"
+                  placeholder="username@site.com"
+                  class="py-4  bg-transparent border-b-2 border-black outline-none" />
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end rounded-full text-white ">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
+              </div>
+            </fieldset>
+          </form>
+      </div>
+        <div class="mt-8 text-center">
+            <p>Copyright ©2024- All right reserved by ACME Industries Ltd</p>
+        </div>
+      </footer> 
 </body>
 
 </html>
